# freeRTOS-R52

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  link.ld  main.c  tasks.c
FreeRTOS-Kernel/: CMakeLists.txt
FreeRTOS-Kernel/examples/cmake_example/: CMakeLists.txt
FreeRTOS-Kernel/portable/: CMakeLists.txt
FreeRTOS-Kernel/portable/GCC/ARM_CR52/: portISR.c  portmacro.h
boot/: start.s
driver/: CMakeLists.txt  gic.c  mhu_v3_x.c  mhu_wrapper_v3_x.c  uart.c
examples/cmake_example_0/: CMakeLists.txt
examples/cmake_example_1/: CMakeLists.txt  link.ld  main.c  readme.txt  start.s
examples/cmake_example_2/: CMakeLists.txt  main.c
examples/cmake_example_r52/: CMakeLists.txt
examples/cmake_r52/: CMakeLists.txt
examples/configuration/: FreeRTOSConfig.h
freertos/: tasks.c
freertos/include/: libc.h
freertos/portable/GCC/UVMM/: port.c  portISR.c
include/: CMakeLists.txt  assert.h  bqueue.h  cqueue.h  crc32.h  debug.h  gic.h  io.h  libc.h  mhu_v3_x.h  system.h  uart-dw-apb.h  uart.h
libs/: libc.c
mailbox/: CMakeLists.txt  cmd.c  cmd.h  cmd_mgr.c  cmd_mgr.h  cmd_priv.c  cmd_priv.h  cmd_session.c  cmd_session.h  cmdef.h  cmdr52_mgr.c  cmdr52_mgr.h  cmdr52_proc.c  cmdr52_proc.h  cmdr52_session.c  cmdr52_session.h  inc.h
portable/: CMakeLists.txt
portable/GCC/ARM_CR52/: gic.h
utils/: CMakeLists.txt  bqueue.c  cqueue.c  crc32.c  libc.c  printf.c
vcodec/: CMakeLists.txt  bidirect_list.c  bidirect_list.h  osal_freertos.h  spinlock.h  vcd_abnormal_irq.c  vcd_abnormal_irq.h  vcd_cfg.h  vcd_dec_defs.h  vcd_normal_cfg.h  vcd_vcmd.c  vcd_vcmd_cfg.h  vcd_vcmd_pm.c  vcd_vcmd_pm.h  vce_abnormal_irq.c  vce_abnormal_irq.h  vce_enc_cfg.h  vce_normal_cfg.h  vce_vcmd.c  vce_vcmd_cfg.h  vce_vcmd_pm.c  vce_vcmd_pm.h  vcmdregisterenum.h  vcmdregistertable.h  vcmdswhwregisters.c  vcmdswhwregisters.h  vcodec.c  vcodec.h  vcx_axi2to1.c  vcx_axi2to1.h  vcx_axife.c  vcx_axife.h  vcx_cfg.h  vcx_cmdbuf_obj.c  vcx_cmdbuf_obj.h  vcx_irq_simulation.c  vcx_irq_simulation.h  vcx_irq_timer.c  vcx_irq_timer.h  vcx_kthread.c  (+13 more)
